--- a/vebphont/u5/u5-demo.html
+++ b/vebphont/u5/u5-demo.html
@@ -565,7 +565,7 @@
 	<code>&lt;link rel=&quot;stylesheet&quot; href=&quot;stylesheet.css&quot; type=&quot;text/css&quot; charset=&quot;utf-8&quot; /&gt;</code>
 
 					<h2>3. Modify your own stylesheet</h2>
-					<p>To take advantage of your new fonts, you must tell your stylesheet to use them. Look at the original @font-face declaration above and find the property called "font-family." The name linked there will be what you use to reference the font. Prepend that webfont name to the font stack in the "font-family" property, inside the selector you want to change. For example:</p>
+					<p>To take advantage of your new fonts, you must tell your stylesheet to use them. Look at the original @font-face declaration above and find the property called "font-family." The name linked there vill be what you use to reference the font. Prepend that webfont name to the font stack in the "font-family" property, inside the selector you want to change. For example:</p>
 <code>p { font-family: 'WebFont', Arial, sans-serif; }</code>
 
 <h2>4. Test</h2>
